<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:textSize="25sp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rotationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/rotation_Period"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/textViewRotation"
        android:layout_width="67dp"
        android:layout_height="29dp"
        android:layout_marginStart="193dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toEndOf="@+id/rotationPeriod"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orbitalPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/orbital_Period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotationPeriod" />

    <TextView
        android:id="@+id/textViewOrbital"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="193dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/orbitalPeriod"
        app:layout_constraintTop_toBottomOf="@+id/textViewRotation" />

    <TextView
        android:id="@+id/diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/diameter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orbitalPeriod" />

    <TextView
        android:id="@+id/textViewDiameter"
        android:layout_width="63dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:text="TextView"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toEndOf="@+id/diameter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrbital" />

    <TextView
        android:id="@+id/climate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/climate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diameter"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewClimate"
        android:layout_width="63dp"
        android:layout_height="24dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="145dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/climate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiameter"

        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/planet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPlanet"
        android:layout_width="398dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_name"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@drawable/generic_planet"
        />


</androidx.constraintlayout.widget.ConstraintLayout>